# EdaDeal2.0

./: .black  .env  .gitignore  .isort.cfg  Fineprice.fig  JSONMerger.py  README.md  ecomon.yaml  pyproject.toml  setup.cfg
APIHandler/app/: __init__.py  sbermodule_test.py
APIHandler/app/configuration/: server.py
APIHandler/app/pkg/: JSONMerger.py
APIHandler_module/: pyproject.toml
APIHandler_module/app/: __init__.py
APIHandler_module/app/configuration/: server.py
APIHandler_module/app/configuration/routes/: __init__.py  routes.py
APIHandler_module/app/internal/routes/: parser2.py  parser_v1.py  parser_v2.py
CartPage/: cart_page.html
CartPage/css/: style.css
CategoriesPage/: Categories.html
CategoriesPage/css/: style.css
CategoryPage/: category.html  index.html
CategoryPage/css/: reset.css  style.css
CategoryPage/css/parts/: _basket-popup.css  _category-popup.css  _container.css  _conteiner.css  _header.css  all.css  (+2 more)
CategoryPage/js/: open-category.js
Econom_main/: pom.xml
Fineprice/Fineprice/: CartView.swift  CategoryView.swift  ContentView.swift  DetailView.swift  FinepriceApp.swift  Info.plist  MainPageView.swift  Model.swift  SearchView.swift  StoreView.swift  merged.json
Fineprice/Fineprice.xcodeproj/: project.pbxproj
MainPage/: main_page.html
MainPage/css/: style.css
OpenAPI/: Econom_main-openapi.yaml
Pattern/: Pattern.html  Pattern1.html
Pattern/css/: reset.css  style.css
Pattern/js/: category-list.js  open-basket.js  open-category.js
Pattern1/: Pattern.html
Pattern1/css/: reset.css  style.css
Pattern1/js/: open-category.js
PatternSearch/: Pattern2.html
PatternSearch/css/: style.css
PromotionExpandedPage/: promotion_expanded.html
PromotionExpandedPage/css/: style.css
PromotionPage/: promotion.html
PromotionPage/css/: reset.css  style.css
SearchPage/: SearchPage.html
SearchPage/css/: style.css
sbermarket2_module/: pyproject.toml
sbermarket2_module/app/: constants.py  cookies.json  data_fetcher.py  main.py  sber_parser2.py  token.txt  user_agent.txt
sbermarket_module/: pyproject.toml
sbermarket_module/app/: categories.py  constants.py  exceptions.py  main.py  retailers_list.json  sber.py
Страница товара/: index.html
Страница товара/css/: reset.css  style.css
Страница товара/js/: category-list.js  main.js
(+135 files in other folders)
