[tool.poetry]
name = "apihandler-module"
version = "0.1.0"
description = "API Endpoints handler"
authors = ["MRossa <maxim.rossa@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
mypy = "^1.9.0"
wemake-python-styleguide = "^0.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
