[tool.poetry]
name = "sbermarket2-module"
version = "0.1.0"
description = ""
authors = ["MRossa <maxim.rossa@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
undetected-chromedriver = "^3.5.5"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.3.0"
mypy = "^1.9.0"
wemake-python-styleguide = "^0.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
